[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "FixRaidenBoss2"
version = "3.3.0"
authors = [
  {name="nhok0169", email="qqqqaaaapppp0000@gmail.com"},
  {name="Albert Gold", email="AlexXianZhenYuAu@gmail.com"}
]

description = "A script to fix Raiden Shogun Boss Phase 1 for all types of mods"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nhok0169/Fix-Raiden-Boss"
